--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <meta http-equiv="refresh" content="1; URL='https://gisellacosta.github.io/Curriculo.html'"/>
 </head>
 <body>
     <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ducimus nostrum repellat, perspiciatis itaque nesciunt quidem corrupti praesentium repellendus, debitis, nemo consequatur sequi commodi. Unde optio commodi ullam dolorem officiis!
-        
+        Redirecionando...
     </p>
 </body>
 </html>
